# ap2-x402-demo

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
ap2_flow/: __init__.py  client.py  merchant.py  types.py
client/: __init__.py  agent.py  client_agent.py  remote_connection.py  task_store.py  wallet_client.py
docs/reports/: e2e-test-report.md
merchant/: __init__.py  __main__.py  agent.py  executor.py  facilitator.py  x402_executor.py
scripts/: run_all.sh  setup.sh
shared/: __init__.py  config.py  constants.py
tests/: test_a2a_integration.py  test_ap2_a2a_integration.py  test_ap2_flow.py  test_e2e.py  test_wallet.py
wallet/: __init__.py  server.py
